# FPSE_Wubble

assignment1/_build/: .db  .digest-db  log
assignment1/src/: submission.ml
assignment2/: dune
assignment2/_build/: .db  .digest-db  log
assignment2/src/: dune  primes.ml  primes.mli  reimplementation.ml  reimplementation.mli  towers.ml
assignment2/test/: dune  primes_tests.ml  reimplementation_tests.ml
assignment3/_build/: .db  .digest-db  log
assignment3/src/: simpledict.ml  simpletree.ml  simpletree.mli
assignment3/test/: dict_tests.ml  tests.ml  tree_tests.ml
assignment4/: dune
assignment4/_build/: .db  .digest-db  log
assignment4/_build/default/src-test/: dune  exec_tests.cma  exec_tests.cmxa  exec_tests.cmxs  exec_tests.ml  hist_tests.cma  hist_tests.cmxa  hist_tests.cmxs  oUnit-Assignment 4 tests.cache  tests.ml
assignment4/_build/default/src-test/.exec_tests.objs/byte/: exec_tests.cmi  exec_tests.cmo  exec_tests.cmt
assignment4/_build/default/src-test/.exec_tests.objs/native/: exec_tests.cmx
assignment4/_build/default/src-test/.hist_tests.objs/byte/: hist_tests.cmi  hist_tests.cmo  hist_tests.cmt
assignment4/_build/default/src-test/.hist_tests.objs/native/: hist_tests.cmx
assignment4/_build/default/src-test/.merlin-conf/: exe-tests  lib-exec_tests  lib-hist_tests
assignment4/_build/default/src-test/.tests.eobjs/byte/: dune__exe__Tests.cmti
assignment4/_build/default/src-test/.tests.eobjs/native/: dune__exe__Tests.cmx
assignment5/: bisect410877976.coverage
assignment6/: dune
assignment7/: discussion.txt
(+239 files in other folders)
